--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "sirv-cli": "^1.0.0",
+    "svelte-loading-spinners": "^0.1.4",
     "svelte-routing": "^1.5.0"
   }
 }
