Added experience info page WIP: addExperience page

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.21.1",
     "sirv-cli": "^1.0.0",
     "svelte-loading-spinners": "^0.1.4",
-    "svelte-routing": "^1.5.0"
+    "svelte-routing": "^1.5.0",
+    "svelte-time-picker": "^1.0.6"
   }
 }
